style: tidy failure formatter helpers
indent() joins instead of reducing with concatenation, linesSafely wraps its
own list rather than copying it again, and describeSafely is static like the
other guarded accessors.

Co-Authored-By: Claude <noreply@anthropic.com>